projects/vb6parse/snapshots/syntax/statements/string_manipulation/lset/lset_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/statements/string_manipulation/lset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: LSetStatement
      children:
        - kind: LSetKeyword
          text: LSet
        - kind: Whitespace
          text: "    "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: myStr
            - kind: Whitespace
              text: "    "
            - kind: EqualityOperator
              text: "="
            - kind: Whitespace
              text: "    "
            - kind: StringLiteralExpression
              children:
                - kind: StringLiteral
                  text: "\"Text\""
        - kind: Whitespace
          text: "    "
        - kind: IdentifierExpression
          children:
            - kind: Newline
              text: "\n"
